@@ -2,6 +2,7 @@
 	* CORE: Added support for @DatabaseFiled(foreignColumnName="name") to map foreign to non-ID.  Thanks to Mathias Lin.
 	* CORE: Added update() and refresh() to ForeignCollection which call through to the inner Dao.
 	* CORE: Improved the custom data persister code so it can extend one of the types.  Added docs and example.
+	* CORE: Added a Joda DateTime persister which uses reflection.  You have to specify the dataType=DataType.DATE_TIME.
 
 4.35: 2/22/2012 (svn r2337)
 	* CORE: Fixed bug where not all queried objects were added to cache. Thanks to Filipe Leandro. Fixes bug #3491418.
